// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`beautify 1`] = `
"Error
    Object.<anonymous> (packages/error/test/index.js:25:17)"
`;

exports[`beautify with title 1`] = `
"Error: title
    Object.<anonymous> (packages/error/test/index.js:34:17)"
`;

exports[`getStack: -1 1`] = `
"Error
    at Object.<anonymous> (/packages/error/test/index.js:15:18)
    at new Promise (<anonymous>)
    at processTicksAndRejections (internal/process/task_queues.js:89:5)"
`;

exports[`getStack: 0 1`] = `
"Error
    at Object.<anonymous> (/packages/error/test/index.js:16:18)
    at new Promise (<anonymous>)
    at processTicksAndRejections (internal/process/task_queues.js:89:5)"
`;

exports[`getStack: 1 1`] = `
"Error
    at Object.<anonymous> (/packages/error/test/index.js:17:18)
    at new Promise (<anonymous>)
    at processTicksAndRejections (internal/process/task_queues.js:89:5)"
`;

exports[`getStack: 2 1`] = `
"Error
    at new Promise (<anonymous>)
    at processTicksAndRejections (internal/process/task_queues.js:89:5)"
`;

exports[`getStack: 3 1`] = `
"Error
    at new Promise (<anonymous>)
    at processTicksAndRejections (internal/process/task_queues.js:89:5)"
`;

exports[`getStack: undefined 1`] = `
"Error
    at Object.<anonymous> (/packages/error/test/index.js:14:18)
    at new Promise (<anonymous>)
    at processTicksAndRejections (internal/process/task_queues.js:89:5)"
`;

exports[`handle just the title fine 1`] = `
"multine
error
message"
`;

exports[`handle multine error message correctly 1`] = `
"Error: multine
error
message
    Object.<anonymous> (packages/error/test/index.js:43:17)"
`;

exports[`keep at least one stack line 1`] = `
"Error
    Object.asyncJestTest (../../../AppData/Local/Yarn/Cache/v4/npm-jest-jasmine2-24.8.0-a9c7e14c83dd77d8b15e820549ce8987cc8cd898/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:102:37)"
`;
